--- a/.classpath
+++ b/.classpath
@@ -14,11 +14,11 @@
 	<classpathentry kind="lib" path="C:/Users/Antonio/.p2/pool/plugins/org.eclipse.ui.workbench_3.108.0.v20160602-1232.jar" sourcepath="C:/Users/Antonio/.p2/pool/plugins/org.eclipse.ui.workbench_3.108.0.v20160602-1232.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Antonio/.p2/pool/plugins/com.ibm.icu_56.1.0.v201601250100.jar" sourcepath="C:/Users/Antonio/.p2/pool/plugins/com.ibm.icu_56.1.0.v201601250100.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Antonio/.p2/pool/plugins/org.eclipse.ui.forms_3.7.0.v20160518-1929.jar" sourcepath="C:/Users/Antonio/.p2/pool/plugins/org.eclipse.ui.forms_3.7.0.v20160518-1929.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Antonio/Dropbox/VII Semestre/Seminario de Traductores/RSyntaxTextArea-master/build/libs/rsyntaxtextarea-2.6.0-SNAPSHOT.jar" sourcepath="C:/Users/Antonio/Dropbox/VII Semestre/Seminario de Traductores/RSyntaxTextArea-master/build/libs/rsyntaxtextarea-2.6.0-SNAPSHOT-sources.jar">
+	<classpathentry kind="lib" path="C:/Users/Antonio/Dropbox/VII Semestre/Seminario de Traductores/Compilador/src/librerias/RSyntaxTextArea-master/build/libs/rsyntaxtextarea-2.6.0-SNAPSHOT.jar" sourcepath="src/librerias/RSyntaxTextArea-master/build/libs/rsyntaxtextarea-2.6.0-SNAPSHOT-sources.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/C:/Users/Antonio/Dropbox/VII%20Semestre/Seminario%20de%20Traductores/RSyntaxTextArea-master/build/libs/rsyntaxtextarea-2.6.0-SNAPSHOT-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="jar:file:/C:/Users/Antonio/Dropbox/VII%20Semestre/Seminario%20de%20Traductores/Compilador/src/librerias/RSyntaxTextArea-master/build/libs/rsyntaxtextarea-2.6.0-SNAPSHOT-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Antonio/Dropbox/VII Semestre/Seminario de Traductores/juniversalchardet-1.0.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio/Dropbox/VII Semestre/Seminario de Traductores/Compilador/src/librerias/juniversalchardet-1.0.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
